Updated sipthor interface for SIPThor 1.0.1
darcs-hash:20081212113942-1e3d8-62d102873eccacfabb74480d2c76ba7b654b5037.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openxcap (1.0.7) unstable; urgency=low
+
+  * Updated sipthor interface for SIPThor 1.0.1
+
+ -- Lucian Stanescu <luci@ag-projects.com>  Fri, 12 Dec 2008 09:38:35 +0000
+
 openxcap (1.0.6) unstable; urgency=low
 
   * fixed: namespace bindings in the request weren't parsed correctly
