--- a/INSTALL
+++ b/INSTALL
@@ -2,9 +2,9 @@
 Installation
 ------------
 
-For Debian testing or unstable on an i386 architecture there is an official
-public repository provided by AG Projects. Install the AG Projects debian
-software signing key:
+For Debian testing or unstable there is an official public repository
+provided by AG Projects. Install the AG Projects debian software signing
+key:
 
 wget http://download.ag-projects.com/agp-debian-gpg.key apt-key add
 agp-debian-gpg.key
