--- a/README
+++ b/README
@@ -75,6 +75,12 @@ Supported XCAP applications
    with the current capabilities of the server
 
 
+Installation
+------------
+
+See INSTALL file.
+
+
 Free support
 ------------
 
