--- a/README
+++ b/README
@@ -80,30 +80,24 @@ Installation
 
 See INSTALL file.
 
+Support
+-------
 
-Free support
-------------
+The project is developed and supported by AG Projects via the wiki
+collaboration system provided at
 
-The project is supported via the wiki collaboration system provided at
 http://openxcap.org
 
 To open ticket please Register first. The ticketing support system is
 available only for registered users. Please beware that the support is
 provided by the community on a best-effort basis.
 
-You may also report bugs or feature request to:
-
-users@lists.opensips.org
-
-A mailing list archive is available at:
-http://lists.opensips.org/cgi-bin/mailman/listinfo/users
-
+For help on the integration between OpenXCAP and OpenSIPS you may consult
+the mailing list users@lists.opensips.org. The mailing list archive is
+available at: http://lists.opensips.org/cgi-bin/mailman/listinfo/users
 
 Commercial support
 ------------------
 
-Commercial support options are available by purchasing:   
-
-1. Multimedia Service Platform: http://ag-projects.com/Products or
-2. OpenXCAP and support from: https://secure.dns-hosting.info/buyer_guide.phtml
+The software is supported commercially by AG Projects http://ag-projects.com
 
