--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,42 @@
+openxcap (1.0.8) unstable; urgency=low
+
+  * Replace openser-mi-proxy with opensips-mi-proxy
+  * Better text indentation
+  * Sync INSTALL with the wiki
+  * Updated README and INSTALL docs
+  * Updated sipthor interface for SIPThor 1.0.1
+  * Use pysupport instead of pycentral for debian packaging
+  * Removed ./debian/openxcap.postinst (seems like auto generated and unnecessary)
+  * More tests for /*[1] case
+  * Fix for AttributeError for node selectors of type /*[1]
+  * Corrected name of pres-rules auid
+  * Test system: enable eventlet after the server was started (otherwise it may not select the right hub)
+  * xcapclientwrap.py: inherit PYTHONPATH from the parent process
+  * Added to do to rename OpenSER to OpenSIPS in source code and documentation
+  * Fix for "global name 'reactor' is not defined" when starting tls
+  * Added test for check_xml_fragment
+  * Use element.check_xml_fragment instead of lxml parser. this solves "unbound prefix" issue
+  * Added check_xml_fragment function: check that element is well-formed
+  * Only import gnutls when necessary
+  * Added simple config for --start-server
+  * Test_errors.py: removed "import *"
+  * Test system: added support for starting and using in-process server
+  * Added -r, --repeat option
+  * Added support for "--client eventlet"
+  * Added support for "--start-server config_file"
+  * Use original options for each test
+  * Test_etags.py: killed whitespace and added an assert
+  * Added test_watchers.py
+  * Test system: added undocumented '--client xcapclient' option. It makes
+    test system to use xcapclient tool instead of xcaplib package. This is
+    only useful for testing xcapclient.
+  * Test system: updated to use python-xcaplib 1.0.8
+  * Generate ETag headers for watchers application
+  * More detailed report for test_auth.py
+  * Fixed typo in the http error response
+
+ -- Adrian Georgescu <ag@ag-projects.com>  Fri, 30 Jan 2009 10:59:44 +0100
+
 openxcap (1.0.7) unstable; urgency=low
 
   * Updated sipthor interface for SIPThor 1.0.1
